--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.page-header{
+  font-size: 300%;
+  text-align: center;
+}
+
+.task{
+  background-color: #cecece;
+  border-radius: 5px;
+  margin: 0 auto;
+  width: 100%;
+}
