--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,13 +13,33 @@ code {
 }
 
 .page-header{
-  font-size: 300%;
+  font-size: 200%;
   text-align: center;
 }
 
 .task{
-  background-color: #cecece;
-  border-radius: 5px;
+  background-color: #f5f5f5;
+  border-radius: 3px;
   margin: 0 auto;
+  padding: 5px;
   width: 100%;
+  color: #000000;
+  justify-content: center;
+/* Center horizontally*/
+  width: 85%;
+  max-width: 700px;
+  display: flex;
+}
+
+
+.icon{
+  float: right;
+  width: 10%;
+}
+
+.info{
+  background-color: #f5f5f5;
+  border-radius: 3px;
+  justify-content: center;
+  text-align: center;
 }
